kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-node-app
  name: mongo-node-app
  namespace: _{_NAMESPACE_}_
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: mongo-node-app 
  type: NodePort
