kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: mongo-node-app
  namespace: _{_NAMESPACE_}_
spec:
    rules:
    - host: mongo-node-app-_{_NAMESPACE_}_._{_INGRESS_IP_}_.nip.io
      http:
        paths:
        - backend:
            service:
              name: mongo-node-app
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - mongo-node-app-_{_NAMESPACE_}_._{_INGRESS_IP_}_.nip.io
      secretName: ingress-local-tls
